<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.tallercuatro.MainActivityDos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <!--Crear Cuenta-->
        <TextView
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:theme="@style/MyStyleInput"/>

        <!--Cuadro de ingreso de usuario-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            android:theme="@style/MyStyleInput">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_2"/>
        </android.support.design.widget.TextInputLayout>
        <!--Fin Cuadro de ingreso de usuario-->

        <!--Cuadro de ingreso de contraseña-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            android:theme="@style/MyStyleInput">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_3"/>
        </android.support.design.widget.TextInputLayout>
        <!--Fin Cuadro de ingreso de Contraseña-->

        <!--Boton Aceptar-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_4"
            android:layout_marginTop="10dp"
            android:theme="@style/ButtonStyle"/>
        <!--Fin Boton Aceptar-->

        <!--Boton Cancelar-->
        <Button
            android:id="@+id/button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_5"
            android:layout_marginTop="10dp"
            android:theme="@style/ButtonStyle"/>
        <!--Fin Boton Cancelar-->
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/icons8_plus_math_40"
        android:layout_margin="20dp"/>

</android.support.design.widget.CoordinatorLayout>
